--- a/src/styles/User.module.css
+++ b/src/styles/User.module.css
@@ -53,3 +53,33 @@
   padding: 20px;
   background-color: #f9f9f9;
 }
+
+.notification {
+    background-color: #4CAF50; /* green color for success */
+    color: white;
+    padding: 15px;
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    z-index: 1000;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+.addButton {
+    background-color: #008CBA; /* blue color */
+}
+
+.approveButton {
+    background-color: #4CAF50; /* green color */
+    margin-left: 5px;
+}
+
+.denyButton {
+    background-color: #f44336; /* red color */
+    margin-left: 5px;
+}
+
+.detailsButton {
+    background-color: #9c27b0; /* purple color */
+}
