--- a/src/styles/User.module.css
+++ b/src/styles/User.module.css
@@ -1,46 +1,38 @@
 /* User.module.css */
-
 .container {
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
   position: relative;
 }
-
 .searchWrapper {
   display: flex;
   align-items: center;
   margin-bottom: 20px;
 }
-
 .inputElement {
   margin-left: 10px;
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 4px;
 }
-
 .articlesTable {
   width: 100%;
   border-collapse: collapse;
   border: 1px solid #e0e0e0;
 }
-
 .articlesTable thead {
   background-color: #f7f7f7;
 }
-
 .articlesTable th,
 .articlesTable td {
   padding: 10px 15px;
   border-bottom: 1px solid #e0e0e0;
   cursor: pointer;
 }
-
 .detailsColumn {
   text-align: center;
 }
-
 .buttonFullWidth {
   width: 100%;
   padding: 10px 15px;
@@ -49,7 +41,6 @@
   cursor: pointer;
   transition: background-color 0.3s;
 }
-
 .articleDetails {
   padding: 20px;
   background-color: #f9f9f9;
@@ -61,21 +52,19 @@
   flex-wrap: wrap;
   gap: 20px;
 }
-
 .gridItem {
-  flex: 1 1 calc(33.33% - 20px); /* Three items per row with 20px gap */
+  flex: 1 1 calc(33.33% - 20px);
+  /* Three items per row with 20px gap */
   border: 1px solid #eaeaea;
   padding: 10px;
   border-radius: 5px;
 }
-
 /* Card Layout */
 .cardWrapper {
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
-
 .cardItem {
   border: 1px solid #eaeaea;
   padding: 15px;
@@ -89,4 +78,128 @@
   margin-top: 15px;
   border-top: 1px solid #eaeaea;
   padding-top: 15px;
+}
+.analysisDropdown {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000;
+  background-color: #fff;
+  border: 1px solid #e1e4e8;
+  padding: 1rem;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  width: 66.66%;
+  height: 80%;
+  overflow-y: auto;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.analysisDropdown input[type="text"],
+.analysisDropdown input[type="date"],
+.analysisDropdown input[type="checkbox"] {
+  height: 36px;
+  /* Adjust height to match textboxes */
+  padding: 8px;
+  border: 1px solid #e1e4e8;
+  border-radius: 4px;
+}
+.analysisDropdown input[type="date"] {
+  width: 150px;
+  /* Adjusted width for the date input */
+  /* top and bottom padding */
+  padding-bottom: 30px;
+}
+.analysisDropdown label {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.analysisDropdown input[type="checkbox"] {
+  width: auto;
+  /* Let the checkbox define its own width */
+  vertical-align: middle;
+}
+/* Adjusting for the Button component */
+.analysisDropdown .button {
+  width: 50%;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+.boldLabel {
+  font-weight: bold;
+}
+.articleTitle {
+  display: block;
+  margin-bottom: 0.5rem;
+}
+.analysisDropdown {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000;
+  background-color: #fff;
+  border: 1px solid #e1e4e8;
+  padding: 1rem;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  width: 66.66%;
+  height: 80%;
+  overflow-y: auto;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.analysisDropdown input[type="text"],
+.analysisDropdown input[type="date"],
+.analysisDropdown input[type="checkbox"] {
+  height: 36px;
+  /* Adjust height to match textboxes */
+  padding: 8px;
+  border: 1px solid #e1e4e8;
+  border-radius: 4px;
+}
+.analysisDropdown input[type="date"] {
+  width: 150px;
+  /* Adjusted width for the date input */
+  /* top and bottom padding */
+  padding-bottom: 30px;
+}
+.analysisDropdown label {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.analysisDropdown input[type="checkbox"] {
+  width: auto;
+  /* Let the checkbox define its own width */
+  vertical-align: middle;
+}
+/* Adjusting for the Button component */
+.analysisDropdown .button {
+  width: 50%;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+.newArticlesHeader {
+  font-size: 1.5rem;
+  margin: 0.5rem 0 1rem;
+  /* Adjust as needed */
+  font-weight: 600;
+  /* Bold for emphasis */
+  color: #333;
+  /* Dark color for better visibility */
+  border-bottom: 2px solid #e1e4e8;
+  /* Optional: Gives a separating line under the title */
+  padding-bottom: 0.5rem;
+  /* Adds some space between the title and the border */
 }
